# mshop-account-service/docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/api/v1/login": {
             "post": {
-                "description": "Receives username and password, returns a success message if payload is valid",
+                "description": "Receives username/password, returns access + refresh token",
                 "consumes": [
                     "application/json"
                 ],
@@ -21,6 +21,7 @@
                 "tags": [
                     "Authentication"
                 ],
+                "summary": "Login user",
                 "parameters": [
                     {
                         "description": "User login credentials",
@@ -44,6 +45,43 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/refresh": {
+            "post": {
+                "description": "Generate new access token using refresh token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Refresh access token",
+                "parameters": [
+                    {
+                        "description": "Refresh token payload",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.RefreshRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -101,24 +139,49 @@
         }
     },
     "definitions": {
+        "handlers.RefreshRequest": {
+            "type": "object",
+            "required": [
+                "refresh_token"
+            ],
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
         "models.LoginRequest": {
             "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
             "properties": {
                 "password": {
                     "type": "string",
-                    "example": "test123"
+                    "minLength": 6,
+                    "example": "test123456"
                 },
                 "username": {
                     "type": "string",
+                    "minLength": 6,
                     "example": "ivan.ivic"
                 }
             }
         },
         "models.OrganizationRegisterRequest": {
             "type": "object",
+            "required": [
+                "address",
+                "email",
+                "name",
+                "oib",
+                "phone_number"
+            ],
             "properties": {
                 "address": {
                     "type": "string",
+                    "minLength": 10,
                     "example": "Savska cesta 123, Zagreb"
                 },
                 "email": {
@@ -127,6 +190,7 @@
                 },
                 "name": {
                     "type": "string",
+                    "minLength": 3,
                     "example": "mShop d.o.o."
                 },
                 "oib": {
@@ -152,9 +216,19 @@
         },
         "models.UserRegisterRequest": {
             "type": "object",
+            "required": [
+                "address",
+                "date_of_birth",
+                "email",
+                "first_name",
+                "last_name",
+                "phone_number",
+                "username"
+            ],
             "properties": {
                 "address": {
                     "type": "string",
+                    "minLength": 10,
                     "example": "Savska cesta 14, Zagreb"
                 },
                 "date_of_birth": {
@@ -167,6 +241,7 @@
                 },
                 "first_name": {
                     "type": "string",
+                    "minLength": 3,
                     "example": "Ivan"
                 },
                 "is_admin": {
@@ -175,6 +250,7 @@
                 },
                 "last_name": {
                     "type": "string",
+                    "minLength": 3,
                     "example": "Ivić"
                 },
                 "phone_number": {
@@ -183,6 +259,7 @@
                 },
                 "username": {
                     "type": "string",
+                    "minLength": 6,
                     "example": "ivan.ivic"
                 }
             }
